[package]
name = "read_mem"
version = "0.1.0"
authors = ["Dimitar 'Whimfoome' Dimitrov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["ntdef", "processthreadsapi", "handleapi", "memoryapi"] }